Relocate SQL files to init-db/sql directory for better organization.

--- a/init-db/Makefile
+++ b/init-db/Makefile
@@ -2,4 +2,4 @@ build-InitDbFunction:
 	npm install
 	npx esbuild app.ts --bundle --platform=node --target=es2020 --outfile=$(ARTIFACTS_DIR)/app.js --minify --sourcemap
 	mkdir -p $(ARTIFACTS_DIR)/sql
-	cp -r ../sql/* $(ARTIFACTS_DIR)/sql
+	cp -r ./sql/* $(ARTIFACTS_DIR)/sql
